# rdump

./: Cargo.toml  README.md  rdump.yaml.example
src/: actions.rs  checked.rs  cli.yaml  config.rs  lib.rs  main.rs  sudo.rs  zfs.rs
src/actions/: borg.rs  runner.rs  snaps.rs  zfs.rs
tests/: zfs.rs
tests/real/: lvm.rs  main.rs
