[package]
name = "rdump"
version = "0.1.0"
authors = ["David Brown <david.brown@linaro.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
regex = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
