[package]
name = "rdump"
version = "0.1.0"
authors = ["David Brown <david.brown@linaro.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
clap = { version = "2.33", features = ["yaml"] }
regex = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "1", features = ["fs", "io-util", "process", "macros", "rt-multi-thread"] }

# Pre-crating, pull in rsure by relative path.
rsure = { path = "../../wd/rsure" }

# Rsure is quite slow if not built with optimizations.  Enable at
# least a bit so it is usable.
[profile.dev]
opt-level = 2
